C&C++/C&C++编译工具/gcc-error-warning/c-Werror=format-security.txt
#define  LOGI(...)  __android_log_print(ANDROID_LOG_INFO,LOG_TAG,__VA_ARGS__)

void helloworld(JNIEnv *env, jobject clazz, jstring jni_str) {
  const char *str_utf8 = env->GetStringUTFChars(jni_str, nullptr);
  LOGI(str_utf8);
  env->ReleaseStringUTFChars(jni_str, str_utf8);
}

jni/hello_world.cpp:7:3: error: format not a string literal字面量 and no format arguments [-Werror=format-security]
LOGI(str_utf8); 改成 LOGI("%s", str_utf8);

-Wformat-security
If -Wformat is specified, also warn about uses of format functions that represent possible security problems. 
At present, this warns about calls to printf and scanf functions where 
the format string is not a string literal [英][ˈlɪtərəl] [美][ˈlɪtərəl]字面量 and there are no format arguments, as in printf (foo);. 
This may be a security hole if the format string came from untrusted input and contains ‘%n’. 
(This is currently a subset of what -Wformat-nonliteral warns about, but in future warnings may be added to -Wformat-security that are not included in -Wformat-nonliteral.) 

------------------------------------------------
10:06 2016/3/25
------------------------------------------------

代码：

static int printlog(lua_State *L)
{
    const char *logstr = lua_tostring(L, -1);
    printf(logstr);
    return  0;
}

错误信息：

./../v6sdk/lualibs/nlog/slog.c: In function 'printlog':
./../v6sdk/lualibs/nlog/slog.c:44:5: error: format not a string literal and no
ormat arguments [-Werror=format-security]
     printf(logstr);
     ^
cc1.exe: some warnings being treated as errors
make.exe: *** [obj/local/armeabi/objs/v6sdk/__/v6sdk/lualibs/nlog/slog.o] Error

分析：

http://blog.csdn.net/whu_zhangmin/article/details/28890025
解决方案：
在对应项目的jni/Application.mk添加一句话

　　APP_CFLAGS += -Wno-error=format-security

意思就是忽视这个error

【问题】
为什么在，android.mk，添加 LOCAL_CFLAGS += -std=c99 -Wno-error=format-security 不行，
在 application.mk 中添加 APP_CFLAGS += -Wno-error=format-security 就可以呢？
都是添加了一个编译选项啊，这两者有什么区别？

http://www.rtsoft.com/forums/showthread.php?102496-Android-NDK-revision-9-quot-Werror-format-security-quot
as of Android NDK revision 9, the following should be added to Android.mk as a work-around for the quoted error.

"LOCAL_DISABLE_FORMAT_STRING_CHECKS := true"